--- a/project-addons/product_serial_number/i18n/es.po
+++ b/project-addons/product_serial_number/i18n/es.po
@@ -6,14 +6,27 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-14 18:35+0000\n"
-"PO-Revision-Date: 2020-09-14 18:35+0000\n"
+"POT-Creation-Date: 2020-09-16 16:00+0000\n"
+"PO-Revision-Date: 2020-09-16 16:00+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
+
+#. module: product_serial_number
+#: model:ir.model.fields,help:product_serial_number.field_product_attribute__create_variant
+msgid ""
+"- Instantly: All possible variants are created as soon as the attribute and its values are added to a product.\n"
+"        - Dynamically: Each variant is created only when its corresponding attributes and values are added to a sales order.\n"
+"        - Never: Variants are never created for the attribute.\n"
+"        Note: the variants creation mode cannot be changed once the attribute is used on at least one product."
+msgstr ""
+"- Instantáneamente: Todas las variantes posibles se crean tan pronto como el atributo y sus valores se añaden a un producto.\n"
+"       - Dinámicamente: Cada variante se crea únicamente cuando se añaden sus atributos y valores correspondientes a una orden de venta.\n"
+"      - Nunca: Nunca se crean variantes para el atributo.\n"
+"Nota: el modo de creación de variantes no se puede modificar una vez que el atributo se utiliza en al menos un producto."
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__active
@@ -49,7 +62,7 @@ msgstr "Atributos"
 #: model:ir.model.fields,field_description:product_serial_number.field_product_product__auto_create_lot
 #: model:ir.model.fields,field_description:product_serial_number.field_product_template__auto_create_lot
 msgid "Auto Create Lot"
-msgstr "Crear lote automáticamente"
+msgstr "Auto crear lote"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__brand
@@ -78,6 +91,11 @@ msgstr "Creado por"
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__create_date
 msgid "Created on"
 msgstr "Creado en"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__deposit_sale
+msgid "Deposit Sale"
+msgstr "Venta depósito"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__display_name
@@ -130,9 +148,14 @@ msgid "Last Updated on"
 msgstr ""
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__limit_date
+msgid "Limit date"
+msgstr "Fecha límite"
+
+#. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__lot_id
 msgid "Lot"
-msgstr ""
+msgstr "Lote"
 
 #. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_lot_attribute_line
@@ -168,15 +191,31 @@ msgid "Model"
 msgstr "Modelo"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__police
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__police
+msgid "Police"
+msgstr "Policía"
+
+#. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
+msgid "Price"
+msgstr "Precio"
+
+#. module: product_serial_number
 #: model:ir.model.fields,help:product_serial_number.field_purchase_order_line__sale_price
 #: model:ir.model.fields,help:product_serial_number.field_stock_production_lot__list_price
 msgid "Price at which the product is sold to customers."
 msgstr "Precio al cual el producto es vendido a los clientes"
 
 #. module: product_serial_number
+#: model:ir.model,name:product_serial_number.model_product_product
+msgid "Product"
+msgstr "Producto"
+
+#. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_product_attribute
 msgid "Product Attribute"
-msgstr "Lñinea de atributo"
+msgstr "Atributo de producto"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__attribute_line_ids
@@ -200,9 +239,9 @@ msgid "Product Template"
 msgstr "Plantilla de producto"
 
 #. module: product_serial_number
-#: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__purchase_id
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__purchase_line_id
 msgid "Purchase"
-msgstr "Compra"
+msgstr "Línea de Compra"
 
 #. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_purchase_attribute_line
@@ -230,6 +269,40 @@ msgid "Purchase line"
 msgstr "Línea de compra"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__purchase_price_15
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__purchase_price_15
+msgid "Purchase price at 15 days"
+msgstr "Precio de compra a 15 días"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__purchase_price_30
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__purchase_price_30
+msgid "Purchase price at 30 days"
+msgstr "Precio de compra a 30 días"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__purchase_price_60
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__purchase_price_60
+msgid "Purchase price at 60 days"
+msgstr "Precio de compra a 60 días"
+
+#. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
+msgid "Quantity"
+msgstr "Cantidad"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__recoverable_sale
+msgid "Recoverable sale"
+msgstr "Venta recuperables"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__police_days
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__police_days
+msgid "Retain days"
+msgstr "Días retención"
+
+#. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__sale_price
 msgid "Sale Price"
 msgstr "Precio de venta"
@@ -249,3 +322,8 @@ msgstr "Cantidad nº serie"
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__value_ids
 msgid "Values"
 msgstr "Valores"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_attribute__create_variant
+msgid "Variants Creation Mode"
+msgstr "Modo de Creación de Variantes"
