--- a/project-addons/pos_custom_cc/i18n/es.po
+++ b/project-addons/pos_custom_cc/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-09 17:33+0000\n"
-"PO-Revision-Date: 2020-12-09 17:33+0000\n"
+"POT-Creation-Date: 2021-02-17 16:50+0000\n"
+"PO-Revision-Date: 2021-02-17 16:50+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -16,12 +16,30 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: pos_custom_cc
+#. openerp-web
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
+#, python-format
+msgid "ADD SERIAL Nº"
+msgstr "AÑADIR Nº SERIE
+
+#. module: pos_custom_cc
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__amount
 msgid "Amount"
 msgstr "Importe"
 
 #. module: pos_custom_cc
+#. openerp-web
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
+#, python-format
+msgid "Apply"
+msgstr "Aplicar"
+
+#. module: pos_custom_cc
+#. openerp-web
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
 #: model_terms:ir.ui.view,arch_db:pos_custom_cc.view_recoverable_lot
+#, python-format
 msgid "Cancel"
 msgstr "Cancelar"
 
@@ -36,6 +54,11 @@ msgstr "No se puede establecer una cantidad superior a 1"
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_line_wzd__commission
 msgid "Commission"
 msgstr "Comisión"
+
+#. module: pos_custom_cc
+#: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__create_invoice
+msgid "Create Invoice"
+msgstr "Crear factura"
 
 #. module: pos_custom_cc
 #: model_terms:ir.ui.view,arch_db:pos_custom_cc.view_recoverable_lot
@@ -67,6 +90,20 @@ msgstr ""
 
 #. module: pos_custom_cc
 #. openerp-web
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
+#, python-format
+msgid "Enter Serial Number here"
+msgstr "Introducir el Nº de serie aquí"
+
+#. module: pos_custom_cc
+#. openerp-web
+#: code:addons/pos_custom_cc/static/src/js/screens.js:0
+#, python-format
+msgid "Enter Serial Nº"
+msgstr "Introduce Nº de serie"
+
+#. module: pos_custom_cc
+#. openerp-web
 #: code:addons/pos_custom_cc/static/src/js/models.js:0
 #: code:addons/pos_custom_cc/static/src/js/models.js:0
 #, python-format
@@ -77,6 +114,12 @@ msgstr "Error buscando lote"
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_line_wzd__id
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__id
 msgid "ID"
+msgstr ""
+
+#. module: pos_custom_cc
+#: code:addons/pos_custom_cc/models/pos_session.py:0
+#, python-format
+msgid "ITP 1/3 "
 msgstr ""
 
 #. module: pos_custom_cc
@@ -136,6 +179,11 @@ msgid "Manage Recoverable purchase"
 msgstr "Gestionar compra recuperable"
 
 #. module: pos_custom_cc
+#: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__line_ids
+msgid "Manage products"
+msgstr "Gestionr productos"
+
+#. module: pos_custom_cc
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__mode
 msgid "Mode"
 msgstr "Modo"
@@ -154,8 +202,8 @@ msgstr "No se encontró impuesto ITP"
 #. module: pos_custom_cc
 #: code:addons/pos_custom_cc/wizard/recoverable_sale_wzd.py:0
 #, python-format
-msgid "No pos session founded"
-msgstr "No se encontró una sesión de POS abierta"
+msgid "No pos session founded.You need to open a pos session"
+msgstr ""
 
 #. module: pos_custom_cc
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_line_wzd__price
@@ -173,8 +221,7 @@ msgstr "Método de pago"
 msgid ""
 "Please define income account for this                        product: \"%s\""
 " (id:%d)."
-msgstr "Por favor defina cuenta de ingresos para este producto:\"%s\""
-" (id:%d)."
+msgstr "Por favor defina cuenta de ingresos para este producto:\"%s\" (id:%d)."
 
 #. module: pos_custom_cc
 #: model:ir.model,name:pos_custom_cc.model_pos_order_line
@@ -214,14 +261,14 @@ msgid "REBU"
 msgstr ""
 
 #. module: pos_custom_cc
+#: model:ir.model.fields.selection,name:pos_custom_cc.selection__recoverable_sale_wzd__mode__sale
+msgid "Recover"
+msgstr ""
+
+#. module: pos_custom_cc
 #: model_terms:ir.ui.view,arch_db:pos_custom_cc.cc_purchase_order_form_recoverable
 msgid "Recoverable Purchase"
 msgstr "Compra recuperable"
-
-#. module: pos_custom_cc
-#: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__line_ids
-msgid "Manage products"
-msgstr "Gestionr productos"
 
 #. module: pos_custom_cc
 #: model:ir.model.fields,field_description:pos_custom_cc.field_pos_order__purchase_id
@@ -252,9 +299,17 @@ msgid "Renew amount"
 msgstr "Importe renovación"
 
 #. module: pos_custom_cc
-#: model:ir.model.fields.selection,name:pos_custom_cc.selection__recoverable_sale_wzd__mode__sale
-msgid "Sale"
-msgstr "Vender"
+#. openerp-web
+#: code:addons/pos_custom_cc/static/src/xml/pos_custom_cc.xml:0
+#, python-format
+msgid "SELECT LOT placeholder"
+msgstr "Hueco para Seleccionar lote"
+
+#. module: pos_custom_cc
+#: code:addons/pos_custom_cc/models/pos_session.py:0
+#, python-format
+msgid "TAX ITP 1/3 "
+msgstr "IMPORTE ITP 1/3"
 
 #. module: pos_custom_cc
 #. openerp-web
@@ -263,14 +318,22 @@ msgstr "Vender"
 msgid ""
 "This lot is marked as no salable. Maybe is in police state or is a "
 "recoverable purchase"
-msgstr "Este lote esta marcado como no vendible. Quizás está en policía o pertenece a una compra recuperable"
+msgstr ""
+"Este lote esta marcado como no vendible. Quizás está en policía o pertenece "
+"a una compra recuperable"
 
 #. module: pos_custom_cc
 #. openerp-web
 #: code:addons/pos_custom_cc/static/src/js/screens.js:0
 #, python-format
 msgid "This product has serial number management. Quantity must be 1"
-msgstr "Este producto tiene gestión por número de serie. La cantidad debe ser 1"
+msgstr ""
+"Este producto tiene gestión por número de serie. La cantidad debe ser 1"
+
+#. module: pos_custom_cc
+#: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_wzd__pos_config_id
+msgid "TpV"
+msgstr ""
 
 #. module: pos_custom_cc
 #: model:ir.model.fields,field_description:pos_custom_cc.field_purchase_order__count_pos_orders
@@ -294,12 +357,6 @@ msgstr ""
 #: model:ir.model.fields,field_description:pos_custom_cc.field_recoverable_sale_line_wzd__wzd_id
 msgid "Wzd"
 msgstr ""
-
-#. module: pos_custom_cc
-#: code:addons/pos_custom_cc/wizard/recoverable_sale_wzd.py:0
-#, python-format
-msgid "You need to open a pos session"
-msgstr "Se necesita una sesión de TpV abierta"
 
 #. module: pos_custom_cc
 #: model:ir.model,name:pos_custom_cc.model_recoverable_sale_line_wzd
