--- a/project-addons/product_serial_number/i18n/es.po
+++ b/project-addons/product_serial_number/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-09 17:34+0000\n"
-"PO-Revision-Date: 2020-12-09 17:34+0000\n"
+"POT-Creation-Date: 2021-03-25 17:36+0000\n"
+"PO-Revision-Date: 2021-03-25 17:36+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -27,6 +27,38 @@ msgstr ""
 "       - Dinámicamente: Cada variante se crea únicamente cuando se añaden sus atributos y valores correspondientes a una orden de venta.\n"
 "      - Nunca: Nunca se crean variantes para el atributo.\n"
 "Nota: el modo de creación de variantes no se puede modificar una vez que el atributo se utiliza en al menos un producto."
+
+#. module: product_serial_number
+#: model:ir.model.fields,help:product_serial_number.field_product_product__type
+#: model:ir.model.fields,help:product_serial_number.field_product_template__type
+msgid ""
+"A storable product is a product for which you manage stock. The Inventory app has to be installed.\n"
+"A consumable product is a product for which stock is not managed.\n"
+"A service is a non-material product you provide."
+msgstr ""
+"Un producto almacenable es un producto para el que gestiona stock. La aplicación de inventario debe estar instalada.\n"
+"Un producto consumible es un producto para el que no se gestionan las existencias.\n"
+"Un servicio es un producto no material."
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__accessory_ids
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__accessory_ids
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_view_product_template
+msgid "Accesories"
+msgstr "Accesorios"
+
+#. module: product_serial_number
+#: model:ir.actions.act_window,name:product_serial_number.action_accessory
+#: model:ir.ui.menu,name:product_serial_number.menu_accessory
+#: model_terms:ir.ui.view,arch_db:product_serial_number.accessory_view_form
+msgid "Accessories"
+msgstr "Accesorios"
+
+#. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.accessory_view_tree
+msgid "Accessory"
+msgstr "Accesorio"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__active
@@ -80,15 +112,45 @@ msgid "Auto Lot sequence"
 msgstr "Secuencia para lotes"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__available_in_pos
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__available_in_pos
+msgid "Available in POS"
+msgstr "Disponible en PdV"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__block_purchase
+msgid "Block Purchase"
+msgstr "Bloquear compra"
+
+#. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__brand
 #: model:ir.model.fields,field_description:product_serial_number.field_stock_production_lot__brand
 msgid "Brand"
 msgstr "Marca"
 
 #. module: product_serial_number
+#: code:addons/product_serial_number/models/purchase.py:0
+#, python-format
+msgid ""
+"Can not confirm order because product %s has this dysfuncionalities: %s"
+msgstr "No se puede confirmar el pedido porque el producto %s tiene las siguientes disfuncionalidades: %s"
+
+#. module: product_serial_number
+#: code:addons/product_serial_number/models/purchase.py:0
+#, python-format
+msgid "Can not confirm order because product %s requires next accesories: %s"
+msgstr "No se puede confirmar el pedido porque el producto %s requiere los siguientes acesorios: %s"
+
+#. module: product_serial_number
 #: model_terms:ir.ui.view,arch_db:product_serial_number.view_transfer_lot
 msgid "Cancel"
 msgstr "Cancelar"
+
+#. module: product_serial_number
+#: model:ir.model.fields,help:product_serial_number.field_product_product__available_in_pos
+#: model:ir.model.fields,help:product_serial_number.field_product_template__available_in_pos
+msgid "Check if you want this product to appear in the Point of Sale."
+msgstr "Marque si quiere que este producto aparezca en el Punto de Venta"
 
 #. module: product_serial_number
 #: model:ir.actions.server,name:product_serial_number.ir_cron_compute_salable_lot_ir_actions_server
@@ -101,6 +163,11 @@ msgstr "Recalcular estado vendible en lotes"
 #: model_terms:ir.ui.view,arch_db:product_serial_number.view_transfer_lot
 msgid "Confirm"
 msgstr "Confirmar"
+
+#. module: product_serial_number
+#: model:ir.model,name:product_serial_number.model_res_partner
+msgid "Contact"
+msgstr "Contacto"
 
 #. module: product_serial_number
 #: model_terms:ir.ui.view,arch_db:product_serial_number.cc_search_product_lot_filter
@@ -118,6 +185,8 @@ msgid "Cost"
 msgstr "Coste"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__create_uid
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__create_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__create_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__create_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__create_uid
@@ -126,6 +195,8 @@ msgid "Created by"
 msgstr "Creado por"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__create_date
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__create_date
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__create_date
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__create_date
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__create_date
@@ -156,12 +227,54 @@ msgid "Dest location"
 msgstr "Ubicación destino"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__discount
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__discount
+msgid "Discount"
+msgstr "Descuento"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__dysfuncionality_ids
+msgid "Disfuncionalities"
+msgstr "Disfuncionalidades"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__accessory_ids
+msgid "Disfuncionality"
+msgstr "Disfuncionalidad"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__display_name
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__display_name
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__display_name
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__display_name
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__display_name
 #: model:ir.model.fields,field_description:product_serial_number.field_transfer_lot_wzd__display_name
 msgid "Display Name"
 msgstr "Nombre mostrado"
+
+#. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_view_product_template
+msgid "Dysfuncionalities"
+msgstr "Disfuncionalidades"
+
+#. module: product_serial_number
+#: model:ir.actions.act_window,name:product_serial_number.action_dysfuncionality
+#: model:ir.ui.menu,name:product_serial_number.menu_dysfuncionality
+#: model_terms:ir.ui.view,arch_db:product_serial_number.dysfuncionality_view_form
+msgid "Dysfuncionality"
+msgstr "Disfuncionalidad"
+
+#. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.dysfuncionality_view_tree
+msgid "Dysfuncionalitys"
+msgstr "Disfuncionalidades"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__dysfuncionality_ids
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__dysfuncionality_ids
+msgid "Dysfunctionalities"
+msgstr "Disfuncionalidades"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__ean13
@@ -183,7 +296,7 @@ msgstr "COMPRA GENERAL"
 #. module: product_serial_number
 #: model:ir.model.fields.selection,name:product_serial_number.selection__purchase_order__cc_type__general
 msgid "General"
-msgstr "General"
+msgstr ""
 
 #. module: product_serial_number
 #: model_terms:ir.ui.view,arch_db:product_serial_number.view_id
@@ -191,6 +304,13 @@ msgid "General purchases"
 msgstr "Compras generales"
 
 #. module: product_serial_number
+#: model:ir.model.fields.selection,name:product_serial_number.selection__purchase_order_line__product_state__b
+msgid "Good State"
+msgstr "Buen estado"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__id
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__id
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__id
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__id
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__id
@@ -224,6 +344,8 @@ msgid "Inventory Locations"
 msgstr "Ubicaciones de inventario"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory____last_update
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality____last_update
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info____last_update
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line____last_update
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line____last_update
@@ -232,6 +354,8 @@ msgid "Last Modified on"
 msgstr ""
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__write_uid
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__write_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__write_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__write_uid
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__write_uid
@@ -240,6 +364,8 @@ msgid "Last Updated by"
 msgstr ""
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__write_date
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__write_date
 #: model:ir.model.fields,field_description:product_serial_number.field_location_info__write_date
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__write_date
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__write_date
@@ -328,10 +454,21 @@ msgid "Manage by serial number"
 msgstr "Gestionar por nº de serie"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__mandatory
+msgid "Mandatory in Purchase"
+msgstr "Obligatorio en compra"
+
+#. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__model
 #: model:ir.model.fields,field_description:product_serial_number.field_stock_production_lot__model
 msgid "Model"
 msgstr "Modelo"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__name
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__name
+msgid "Name"
+msgstr "Nombre"
 
 #. module: product_serial_number
 #: model:ir.model.fields.selection,name:product_serial_number.selection__stock_location__cc_type__normal
@@ -352,6 +489,11 @@ msgstr "Unidad operacional"
 #: model:ir.model.fields,field_description:product_serial_number.field_transfer_lot_wzd__location_id
 msgid "Origin location"
 msgstr "Ubicación origen"
+
+#. module: product_serial_number
+#: model:ir.model.fields.selection,name:product_serial_number.selection__purchase_order_line__product_state__a
+msgid "Perfect State"
+msgstr "Perfecto estado"
 
 #. module: product_serial_number
 #: code:addons/product_serial_number/wizard/transfer_lot_wzd.py:0
@@ -375,6 +517,12 @@ msgid "Police date"
 msgstr "Fecha límite policía"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__product_accessory_ids
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__product_dys_ids
+msgid "Possible Product dysfuncionslities"
+msgstr "Posibles disfuncionalidades producto"
+
+#. module: product_serial_number
 #: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
 msgid "Price"
 msgstr "Precio"
@@ -384,6 +532,12 @@ msgstr "Precio"
 #: model:ir.model.fields,help:product_serial_number.field_stock_production_lot__list_price
 msgid "Price at which the product is sold to customers."
 msgstr "Precio al cual el producto es vendido a los clientes"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_accessory__print_in_ticket
+#: model:ir.model.fields,field_description:product_serial_number.field_dysfuncionality__print_in_ticket
+msgid "Print in ticket"
+msgstr "Imprimir en ticket"
 
 #. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_product_product
@@ -407,14 +561,30 @@ msgid "Product Info"
 msgstr "Información producto"
 
 #. module: product_serial_number
+#: model_terms:ir.ui.view,arch_db:product_serial_number.cc_purchase_order_form
+msgid "Product Info 2"
+msgstr "Histórico"
+
+#. module: product_serial_number
 #: model_terms:ir.ui.view,arch_db:product_serial_number.cc_view_production_lot_form
 msgid "Product Info."
 msgstr "Información producto"
 
 #. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_purchase_order_line__product_state
+msgid "Product State"
+msgstr "Estado producto"
+
+#. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_product_template
 msgid "Product Template"
 msgstr "Plantilla de producto"
+
+#. module: product_serial_number
+#: model:ir.model.fields,field_description:product_serial_number.field_product_product__type
+#: model:ir.model.fields,field_description:product_serial_number.field_product_template__type
+msgid "Product Type"
+msgstr "Tipo de producto"
 
 #. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_stock_production_lot__recovered
@@ -513,10 +683,6 @@ msgstr "COMPRA RECUPERABLE"
 
 #. module: product_serial_number
 #: model:ir.model.fields.selection,name:product_serial_number.selection__purchase_order__cc_type__recoverable_sale
-msgid "Recoverable"
-msgstr "Recuperable"
-
-#. module: product_serial_number
 #: model:ir.model.fields.selection,name:product_serial_number.selection__stock_location__cc_type__recoverable_sale
 msgid "Recoverable"
 msgstr "Recuperable"
@@ -619,6 +785,11 @@ msgid "Units"
 msgstr "Unidades"
 
 #. module: product_serial_number
+#: model:ir.model.fields.selection,name:product_serial_number.selection__purchase_order_line__product_state__c
+msgid "Used"
+msgstr "Usado"
+
+#. module: product_serial_number
 #: model:ir.model.fields,field_description:product_serial_number.field_lot_attribute_line__value_ids
 #: model:ir.model.fields,field_description:product_serial_number.field_purchase_attribute_line__value_ids
 msgid "Values"
@@ -628,6 +799,16 @@ msgstr "Valores"
 #: model:ir.model.fields,field_description:product_serial_number.field_product_attribute__create_variant
 msgid "Variants Creation Mode"
 msgstr "Modo de Creación de Variantes"
+
+#. module: product_serial_number
+#: model:ir.model,name:product_serial_number.model_accessory
+msgid "accessory"
+msgstr ""
+
+#. module: product_serial_number
+#: model:ir.model,name:product_serial_number.model_dysfuncionality
+msgid "dysfuncionality"
+msgstr ""
 
 #. module: product_serial_number
 #: model:ir.model,name:product_serial_number.model_location_info
